objects/IATSPayment__Transaction__c.object
<CustomObject>
    <description>Utilized to track payment transaction.</description>
    <fields>
        <fullName>IATSPayment__ACH_Account_Number__c</fullName>
        <inlineHelpText>Last 4 digits of ACH account number</inlineHelpText>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__ACH_Account_Type__c</fullName>
        <label>ACH Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Amount__c</fullName>
        <description>Deprecated field utilized previous to version 2.0 of Brickwork. The &apos;Amount($)&apos; currency field should now be utilized.</description>
        <label>Amount (Text Field)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Amount_currency__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card_Expiry_Date__c</fullName>
        <label>Credit Card Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card__c</fullName>
        <inlineHelpText>Last 4 digits of credit card number</inlineHelpText>
        <label>Credit Card Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Currency__c</fullName>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Merchant Account</label>
        <referenceTo>IATSPayment__IATS_Account__c</referenceTo>
        <relationshipLabel>iATS Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Customer Code</label>
        <referenceTo>IATSPayment__IATS_Customer_Code__c</referenceTo>
        <relationshipLabel>iATS Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Journal_ID__c</fullName>
        <description>The unique ID number assigned by iATS. Used to connect iATS ACH Transactions to new iATS Return Records.</description>
        <inlineHelpText>The unique ID number assigned by iATS. Used to connect iATS ACH Transactions to new iATS Return Records.</inlineHelpText>
        <label>Journal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mandate_ID__c</fullName>
        <formula>IATSPayment__IATS_Customer_Code__r.IATSPayment__Mandate_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The SEPA Mandate ID for EURO bank debit transactions. Unique ID assigned to each donor and linked to their iATS Customer Code record.</inlineHelpText>
        <label>Mandate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mandate_ID_del__c</fullName>
        <description>The field is superseded by the Mandate ID field and should not be utilized.</description>
        <label>Mandate ID - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Address__c</fullName>
        <label>Payer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_City__c</fullName>
        <label>Payer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_First_Name__c</fullName>
        <label>Payer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Last_name__c</fullName>
        <label>Payer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_State__c</fullName>
        <label>Payer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Zip_Code__c</fullName>
        <label>Payer Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Status__c</fullName>
        <description>The Status of the iATS Transaction. Will indicate OK Approved if successful, Reject if rejected, and Return if a successful ACH/DD Transaction was returned at a later date. Click the related &apos;iATS Debit Return&apos; record for more information.</description>
        <inlineHelpText>The Status of the iATS Transaction. Will indicate OK Approved if successful, Reject if rejected, and Return if a successful ACH/DD Transaction was returned at a later date. Click the related &apos;iATS Debit Return&apos; record for more information.</inlineHelpText>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__UK_DD_Reference__c</fullName>
        <description>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is the donors unique number associated to their DD Instruction (DDI).</description>
        <formula>IATSPayment__IATS_Customer_Code__r.IATSPayment__ACH_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is the donors unique number associated to their DD Instruction (DDI).</inlineHelpText>
        <label>UK DD Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__UK_DD_Reference_del_del__c</fullName>
        <description>The field is superseded by the UK DD Reference field and should not be utilized.</description>
        <label>UK DD Reference - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_Debit_Return_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The iATS Return record related to this Customer Code. For more information on the iATS Return, or what action you should take, click the record link and then the &quot;Help for this Page&quot; link in the top right corner of the Return record.</description>
        <inlineHelpText>The iATS Return record related to this Transaction. For more information on the iATS Return, click the record link to view the return reason. If for UK DD, click the &quot;Help for this Page&quot; link in the top right corner of the Return record for action items.</inlineHelpText>
        <label>iATS Debit Return</label>
        <referenceTo>IATSPayment__iATS_Debit_Return__c</referenceTo>
        <relationshipLabel>iATS Transactions</relationshipLabel>
        <relationshipName>iATS_Transactions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>iATS Transaction</label>
    <listViews>
        <fullName>IATSPayment__All_Transactions</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>IATSPayment__Date__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>IATSPayment__Status__c</columns>
        <columns>IATSPayment__Amount_currency__c</columns>
        <columns>IATSPayment__IATS_Account__c</columns>
        <columns>IATSPayment__Journal_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IATSPayment__Approved_Transactions</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Amount_currency__c</columns>
        <columns>IATSPayment__Status__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>IATSPayment__Contact__c</columns>
        <columns>IATSPayment__Opportunity__c</columns>
        <columns>IATSPayment__Date__c</columns>
        <columns>IATSPayment__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATSPayment__Status__c</field>
            <operation>contains</operation>
            <value>Approved,OK</value>
        </filters>
        <label>Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IATSPayment__Refunded_Transactions</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Amount_currency__c</columns>
        <columns>IATSPayment__Status__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>IATSPayment__Contact__c</columns>
        <columns>IATSPayment__Opportunity__c</columns>
        <columns>IATSPayment__Date__c</columns>
        <columns>IATSPayment__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATSPayment__Status__c</field>
            <operation>contains</operation>
            <value>Refund</value>
        </filters>
        <label>Refunded</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IATSPayment__Rejected_Transactions</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Amount_currency__c</columns>
        <columns>IATSPayment__Status__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>IATSPayment__Contact__c</columns>
        <columns>IATSPayment__Opportunity__c</columns>
        <columns>IATSPayment__Date__c</columns>
        <columns>IATSPayment__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATSPayment__Status__c</field>
            <operation>contains</operation>
            <value>Reject</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iATS Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IATSPayment__validation_test</fullName>
        <active>false</active>
        <description>DEPRECATED - No longer utilized.</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>